# ff

./: .dockerignore  .eslintrc.json  .gitignore  .golangci.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile.node  Dockerfile.rust  README.md  deno.json  docker-compose.yaml  docker.anchor.Dockerfile  docker.anchor.ci.Dockerfile  docker.deno.Dockerfile  docker.go.Dockerfile  docker.node.Dockerfile  docker.python.Dockerfile  docker.rust.Dockerfile  docker.solana.Dockerfile  docker.solana.ci.Dockerfile  docker.solana_builder.ci.Dockerfile  eslint.config.mjs  ff.code-workspace  go.work  go.work.sum  mypy.ini  package-lock.json  package.json  pylintrc  pyproject.toml  requirements.txt  rust-toolchain.toml  solana-cli.docker.yml  solana-cli.local.yml  solana_docker_entrypoint.sh  solana_extract_program_keys.sh  tsconfig.api.json  tsconfig.json
.claude/: CLAUDE.md  settings.json
.github/workflows/: apis.yml  blockchain.yml  docker.yml  main.yml  solana_deploy.yml  terraform.yml  terraform_deploy.yml
docker_hub/: ff_anchor.md  ff_solana.md  ff_solana_builder.md
fragments/: api.go  api.py  api.rs  api.ts  go.mod  go.sum  index.node.ts  index.py  main.deno.ts  main.go  main.node.ts  main.py  main.rs  main.ts
fragments/adrs/: 001_hcp_terraform_state_backend.md  002_terraform_directory_and_workspace_layout.md  003_aws_login_auth_for_ff_dev_workspace.md  004_oidc_auth_for_ff_prod_workspace.md  005_helius_rpc_provider_for_devnet.md  006_deploy_solana_programs_to_devnet.md  007_upgradeable_solana_programs.md  008_devnet_deployer_keypair_storage.md  009_manual_bootstrap_initial_devnet_deploy.md
fragments/blockchain/solana/tests/: Cargo.toml  counter.rs  counter.test.ts  register.rs  round.rs  round.test.ts  username.rs  username.test.ts
fragments/blockchain/solana/tests/src/: lib.rs
fragments/env_vars/: __init__.py  env_vars.deno.test.ts  env_vars.node.test.ts  env_vars.node.ts  env_vars_test.go  env_vars_utils.deno.test.ts  env_vars_utils.deno.ts  env_vars_utils.go  env_vars_utils.node.test.ts  env_vars_utils.py  env_vars_utils.rs  env_vars_utils.test.ts  env_vars_utils.ts  mod.rs  test_env_vars.py  test_env_vars_utils.py
fragments/postgres_db/: __init__.py  mod.rs  postgres_crud.go  postgres_crud.py  postgres_crud.rs  postgres_crud.test.ts  postgres_crud.ts  postgres_crud_test.go  test_postgres_crud.py
fragments/redis/: redis_crud.test.ts  redis_crud.ts
fragments/redis_db/: __init__.py  mod.rs  redis_crud.go  redis_crud.py  redis_crud.rs  redis_crud.test.ts  redis_crud.ts  redis_crud_test.go  test_redis_crud.py
fragments/solana_airdrop/: __init__.py  mod.rs  solana_airdrop_utils.go  (+6 more)
(+272 files in other folders)
