[package]
name = "ff"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite = "0.36.0"
redis = "0.27.5"
postgres = "0.19.9"
solana-sdk = "2.2.2"
solana-client = "2.2.6"
semver = "1.0.26"
num-format = "0.4.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
once_cell = "1.21.3"
binrw = "0.15.0"
uuid = { version = "1.18.1", features = ["v4"] }
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
hyper = "1.7.0"
http-body-util = "0.1.3"

[[bin]]
name = "api"
path = "fragments/api.rs"
