[project]
name = "ff"
version = "0.1.0"
requires-python = "==3.12.4"
dependencies = [
    "redis==5.1.0",
    "psycopg[binary,pool]==3.2.3",
    "solders==0.26.0",
    "base58==2.1.1",
    "solana==0.36.6",
    "construct==2.10.68",
    "python-dotenv==1.1.0",
    "fastapi[standard]==0.128.0",
    "uvicorn[standard]==0.40.0",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "mypy==1.10.1",
    "pylint==3.2.5",
    "ruff==0.11.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
files = "fragments/**/**.py"

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 120
